--- a/GSB_Appli/appliFrais/styles/styles.css
+++ b/GSB_Appli/appliFrais/styles/styles.css
@@ -14,9 +14,9 @@ body{
   width : 65%;
   margin-left: auto ;
   margin-right: auto ;
-  margin-top:  auto ;
+  margin-top:  5px ;
   margin-bottom: 1em;
-  border : 0.2em solid black;
+  border : 1px solid black;
   padding : 0.1em;
 }
 #entete{
@@ -38,28 +38,37 @@ body{
   padding:0.4em;
   padding: 0.2em;
   border-collapse: separate;
+  text-align: center;
+  border-radius: 20px;
 }
 #menuGauche {
   margin-top : 0.8em;
   padding :1em;
   color: rgb(0,85,227);
   float: left;
-  width: 20%;
+  width: 15%;
+  position: absolute;
+  top: 160px;
+  left : 8px;
+  background-color: white;
+  border : solid 1px black;
+  border-radius: 3px;
 }
 
 #contenu{
   border: none;
   padding: 1.3em;
   background-color: white;
-  border-left : solid 0.1em black;
   margin-top : 1.2em;
-  margin-left: 23%;
+  margin-left: 2em;
+  border-radius: 5%;
 /* permet de fixer une hauteur mini sur les navigateurs modernes */
   min-height:27em;
 /* pour obtenir le même effet sur IE, sachant que si le contenu dépasse, il
 "poussera" la hauteur en ne respectant pas la norme. On se joue de ses lacunes
 */
   height:50em;
+
 
 }
 
@@ -135,7 +144,7 @@ ul#menuList a:hover {
   border : solid 0.1em #000;
   border-bottom-width:1px;
   margin-bottom : 0em;
-  width : 95%;
+  width : auto;
   border-radius: 5px;
 }
 .piedForm {
@@ -160,9 +169,9 @@ form {
 }
 .corpsForm label{
   text-align:left;
-  width:10em;
+  width:auto;
   padding: 0 .5em 0 0;
-  line-height: 1.8;
+  line-height: auto;
   clear: both;
   float: left;
 }
@@ -172,7 +181,7 @@ float: left;
 }
 .corpsForm  select{
 float: left;
-width: 11em;
+width: auto;
 }
 input, button, textarea, select{
   font-family:"Trebuchet MS", sans-serif;
@@ -240,8 +249,10 @@ taille de caractères légèrement supérieure à la normale */
 }
 #contenu a:hover {
    text-decoration:underline;
-   background-color : #D9BB7A;
-   font-size : 1em;
+   background-color : red;
+   font-size : 1.1em;
+   color : white;
+   border-radius: 3px;
 }
 
 /* Style pour les parties importantes de la page principale */
@@ -324,6 +335,7 @@ table.listeLegere th.libelle{
   height : auto;
   padding-bottom: auto;
   padding-top: auto;
+  text-align: center;
 }
 
 #contenu img {
