--- a/GSB_Appli/appliFrais/styles/styles.css
+++ b/GSB_Appli/appliFrais/styles/styles.css
@@ -46,14 +46,17 @@ body{
   padding :1em;
   color: rgb(0,85,227);
   float: left;
-  width: 15%;
+  width: 10%;
   position: absolute;
   top: 160px;
   left : 8px;
-  background-color: white;
+  background-color:white ;
   border : solid 1px black;
   border-radius: 3px;
   line-height: 150%;
+}
+html>body>a#contenu{
+  line-height: 100%;
 }
 
 #contenu{
